# BonusServer_Node/openapi.yaml
@@ -6,7 +6,7 @@ info:
   version: "1.0.0"
   description: API 說明
 servers:
-  - url: http://127.0.0.1:8000
+  - url: http://127.0.0.1:8000 #http://130.211.246.198:8000
 components:
   securitySchemes:
     BearerAuth:
@@ -22,6 +22,8 @@ tags:
     description: 配置相關的操作
   - name: System
     description: 系統相關的操作
+  - name: License
+    description: 監控授權的操作
 paths:
   /test/login:
     post:
@@ -349,6 +351,83 @@ paths:
           description: Server error
       security:
         - BearerAuth: []   # Specify the Bearer token security scheme here
+
+  /license/hstone:
+    post:
+      summary: License for HStone
+      description: Logs wingate/winlobby instance
+      tags: [License]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                ip_public:
+                  type: string
+                  description: public IP of VM
+                ip_local:
+                  type: string
+                  description: local IP of VM
+      responses:
+        200:
+          description: Successful licensed
+          content:
+            application/json:
+              schema:
+                type: string
+        500:
+          description: Failed
+
+  /license/checkdb:
+    post:
+      summary: check DB for HStone
+      description: check and ready to remove DB
+      tags: [License]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                ip_public:
+                  type: string
+                  description: public IP of VM
+                ip_local:
+                  type: string
+                  description: local IP of VM
+      responses:
+        200:
+          description: Successful licensed
+          content:
+            application/json:
+              schema:
+                type: string
+        500:
+          description: Failed
+
+  /license/log:
+    post:
+      summary: log for HStone
+      description: record log
+      tags: [License]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: string
+      responses:
+        200:
+          description: Successful licensed
+          content:
+            application/json:
+              schema:
+                type: string
+        500:
+          description: Failed
 
 components:
   schemas:
